ignore almost all build products

--- a/.cvsignore
+++ b/.cvsignore
@@ -1,3 +1,27 @@
-myman-cvs
-obj
+config.h
+config.status
+GNUmakefile
+makefile.cp
 myman
+myman.exe
+myman-cvs
+myman.6
+myman.command
+myman.dvi
+myman.html
+myman.ps
+myman.txt
+obj
+xbigman.sh
+xbitman.sh
+xbitman2.sh
+xbitman3.sh
+xbitman4.sh
+xbitman5.sh
+xbitman6.sh
+xhugeman.sh
+xmyman.sh
+xmyman2.sh
+xmyman3.sh
+xmyman4.sh
+xquackman.sh
